# PAFC

./: .gitignore  DESIGN.md  README.md  docker-compose.yml  package-lock.json  package.json
.hermes/: design-system.md
.hermes/plans/: engine-trace-audit.md  narrative-log-patch.txt  phase1-backend.md  phase23-animation.md  phase31-claude-prompt.txt  phase31-narrative-log-complete.md  phase4-auth-dashboard.md  phase5-map-spectrum.md  (+2 more)
.loop/: .gate-state.json  .task-state.json  config.json  context.md  conventions.md  impact-map.md  impact-plan.md  loop-gate.py  pitfalls.md  pre-commit-gate.py  state.md
.understand-anything/: .understandignore  config.json  knowledge-graph.json  meta.json
backend/: pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: allocation.py  auth.py  coverage.py  fs_links.py  imt.py  polygon.py  propagation.py
backend/app/core/: auth.py  config.py
backend/app/db/: 002_indoor.sql  003_polygon.sql  004_frame_coverage.sql  004_fs_coverage.sql  database.py
backend/app/models/: fs_link.py  imt.py
backend/app/services/: allocation_engine.py  channel_checker.py  circle_packing.py  coverage.py  frame_structure.py  fs_coverage.py  imt_buffer.py  interference.py  narrative_log.py  propagation.py
backend/app/services/_archived/: circle_packing.py
backend/migrations/: 001_init.sql
backend/tests/: conftest.py  test_auth.py  test_config.py  test_fs_link.py  test_imt.py  test_main.py
frontend/: index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+31 files in other folders)
